--- a/web_version.org
+++ b/web_version.org
@@ -1,11 +1,3 @@
-#+title: .emacs.d
-#+author: Johnny Sigman
-#+OPTIONS: toc:nil
-
-* About
-
-This web page is a tangled version of my literate [[https://github.com/jsigman/emacs-config][elisp config]]. Throughout this document, you may find helpful notes, tricks, and comments. I have been tinkering with emacs in some way since 2013. I made this repeatable and git-controlled in 2019, and in 2023 I began to publish it on my web page.
-
 #+BEGIN_EXPORT markdown
 ---
 layout: post
@@ -18,8 +10,15 @@ importance: 1
 ---
 #+END_EXPORT
 
-#+TOC: headlines 2
+#+title: .emacs.d
+#+author: Johnny Sigman
+#+OPTIONS: toc:nil
 
+* TODO About
+
+This web page is a tangled version of my literate [[https://github.com/jsigman/emacs-config][elisp config]]. Throughout this document, you may find helpful notes, tricks, and comments. I have been tinkering with emacs in some way since 2013. I made this repeatable and git-controlled in 2019, and in 2023 I began to publish it on my web page.
+
+#+TOC: headlines 2
 
 #+include: "mode-settings/macos-settings.org"
 #+include: "mode-settings/path-settings.org"
