--- a/mode-settings/docker-settings.org
+++ b/mode-settings/docker-settings.org
@@ -4,4 +4,7 @@
 (use-package
  dockerfile-mode
  :config (setq dockerfile-mode-command "docker"))
+(use-package docker
+  :ensure t
+  :bind ("C-c d" . docker))
 #+END_SRC
