--- a/mode-settings/global-settings.org
+++ b/mode-settings/global-settings.org
@@ -4,7 +4,10 @@
 *** Zoom
 I think this is a little too aggressive right now, but it's a cool idea.
 #+begin_src emacs-lisp :load no
-(use-package zoom :init (setq zoom-size '(0.618 . 0.618)) :config (zoom-mode))
+(use-package
+ zoom
+ :init (setq zoom-size '(0.618 . 0.618))
+ :config (zoom-mode))
 #+end_src
 *** Visual Fill Column
 #+begin_src emacs-lisp :load no
@@ -21,12 +24,20 @@ I think this is a little too aggressive right now, but it's a cool idea.
  :ensure t
  :config (centered-window-mode t))
 #+end_src
-
 ** Miscellaneous
 #+begin_src emacs-lisp :load yes
 (setq native-comp-async-report-warnings-errors nil)
 ;; Show the line number of the cursor in the mode bar at the bottom of each buffer
 (setq line-number-mode t)
+;; Disable the loud bell
+(setq ring-bell-function
+      (lambda ()
+        (let ((orig-fg (face-foreground 'mode-line)))
+          (set-face-foreground 'mode-line "#F2804F")
+          (run-with-idle-timer 0.1 nil
+                               (lambda (fg)
+                                 (set-face-foreground 'mode-line fg))
+                               orig-fg))))
 
 ;; Make sure all backup files only live in one place
 (setq backup-directory-alist `((".*" . ,temporary-file-directory)))
@@ -74,7 +85,10 @@ I think this is a little too aggressive right now, but it's a cool idea.
          compilation-mode))
  (popper-mode +1) (popper-echo-mode +1))
 
-(literate-elisp-load "colors-settings.org")
+(use-package page-break-lines :config (global-page-break-lines-mode))
+
+(use-package eldoc :hook (prog-mode . eldoc-mode))
+
 (use-package
  combobulate
  ;; Optional, but recommended.
@@ -106,7 +120,10 @@ I think this is a little too aggressive right now, but it's a cool idea.
 (define-key global-map (kbd "M-i") 'previous-multiframe-window)
 
 (setq aw-keys '(?a ?s ?d ?f ?g ?h ?j ?k ?l))
+#+END_SRC
 
+*** Anzu
+#+begin_src emacs-lisp :load yes
 (use-package
   anzu
   
@@ -114,60 +131,41 @@ I think this is a little too aggressive right now, but it's a cool idea.
   (([remap query-replace] . #'anzu-query-replace)
    ([remap query-replace-regexp] . #'anzu-query-replace-regexp))
   :config (global-anzu-mode +1))
+#+end_src
 
-;; Disable the loud bell
-(setq ring-bell-function
-      (lambda ()
-        (let ((orig-fg (face-foreground 'mode-line)))
-          (set-face-foreground 'mode-line "#F2804F")
-          (run-with-idle-timer 0.1 nil
-                               (lambda (fg)
-                                 (set-face-foreground 'mode-line fg))
-                               orig-fg))))
+*** Line Highlighting
+#+begin_src emacs-lisp :load yes
+(use-package lin :init (lin-global-mode t))
 
-(use-package lin )
-(lin-global-mode t)
-
-(use-package hl-line 
-  :config
-(add-hook
- 'eshell-mode-hook (lambda () (setq-local global-hl-line-mode nil)))
-(add-hook
- 'term-mode-hook (lambda () (setq-local global-hl-line-mode nil)))
-(add-hook
- 'vterm-mode-hook (lambda () (setq-local global-hl-line-mode nil)))
-(global-hl-line-mode t)
-)
+(use-package
+ hl-line
+ :config
+ (add-hook
+  'eshell-mode-hook (lambda () (setq-local global-hl-line-mode nil)))
+ (add-hook
+  'term-mode-hook (lambda () (setq-local global-hl-line-mode nil)))
+ (add-hook
+  'vterm-mode-hook (lambda () (setq-local global-hl-line-mode nil)))
+ (global-hl-line-mode t))
 
 (literate-elisp-load "term-settings.org")
 
-(use-package dash )
-(use-package ht )
+(use-package dash)
+(use-package ht)
 
 ;; Replace the text of selections
 (pending-delete-mode t)
+#+end_src
 
-;; UndoTree
-;; (straight-use-package 'undo-tree)
-;; (straight-use-package 'undo-tree)
-;; (require 'undo-tree)
-;; (global-undo-tree-mode)
-
-;; Long lines
- ;; (global-so-long-mode t)
-
-;; Info modes
-;; (straight-use-package 'info-plus)
-;; (straight-use-package 'info-colors)
-;; (add-hook 'Info-selection-hook 'info-colors-fontify-node)
-
-(use-package
- page-break-lines
- 
- :config (global-page-break-lines-mode))
-
-(use-package eldoc  :hook (prog-mode . eldoc-mode))
-
+*** Undo Tree
+I haven't found a great way to use undo-tree, but everyone seems to love it.
+#+begin_src emacs-lisp :load no
+(use-package undo-tree :init (global-undo-tree-mode))
+#+end_src
+*** So long mode
+I find this breaks browsing of long json files, more than it helps me out.
+#+begin_src emacs-lisp :load no
+(global-so-long-mode t)
 #+end_src
 ** Dashboard
 #+begin_src emacs-lisp :load yes
@@ -179,7 +177,6 @@ I think this is a little too aggressive right now, but it's a cool idea.
    :host github
    :repo "emacs-dashboard/emacs-dashboard"
    :files ("banners" :defaults))
-
  :config
  ;; Set the title
  (setq dashboard-banner-logo-title "Welcome to Emacs!")
@@ -227,7 +224,6 @@ I think this is a little too aggressive right now, but it's a cool idea.
 
  (dashboard-setup-startup-hook))
 #+end_src
-
 ** Icons
 #+begin_src emacs-lisp :load yes
 (use-package all-the-icons )
@@ -283,15 +279,27 @@ I think this is a little too aggressive right now, but it's a cool idea.
     ;; else
     ))
 
-;; Use ace-popup-menu for completions
-(straight-use-package 'ace-popup-menu)
-(ace-popup-menu-mode 1)
-(setq ace-popup-menu-show-pane-header t)
+#+end_src
 
-;; Start-up profiler
+*** Ace popup
+#+begin_src emacs-lisp :load yes
+;; Use ace-popup-menu for completions
+(use-package
+ ace-popup-menu
+ :config
+ (ace-popup-menu-mode 1)
+ (setq ace-popup-menu-show-pane-header t))
+
+#+end_src
+
+*** Emacs startup profiler
+#+begin_src emacs-lisp :load yes
 (use-package esup)
 
-;; Scratch.el
+#+end_src
+
+*** Scratch
+#+begin_src emacs-lisp :load yes
 (use-package
  scratch
  :straight
@@ -324,7 +332,6 @@ I think this is a little too aggressive right now, but it's a cool idea.
    :type git
    :host github
    :repo "lastquestion/explain-pause-mode")
- ;; :config (explain-pause-mode)
  )
 
 ;; use helpful instead of the normal help buffers
@@ -362,7 +369,6 @@ I think this is a little too aggressive right now, but it's a cool idea.
 
 ** Indentation
 #+begin_src emacs-lisp :load yes
-; disable electric indent
 (electric-indent-mode 0)
 ;; (use-package
 ;;  aggressive-indent
@@ -410,11 +416,7 @@ I think this is a little too aggressive right now, but it's a cool idea.
 
 **  Global Keybindings
 #+begin_src emacs-lisp :load yes
-;-------------CUSTOM KEYBINDINGS-----------;
 (global-set-key (kbd "M-k") 'kill-this-buffer)
-;Window management
-;Switch window with M-k
-
 (global-set-key (kbd "C-c C-b") 'compile)
 (global-set-key (kbd "M-0") 'delete-window)
 (global-set-key (kbd "M-1") 'delete-other-windows)
@@ -430,7 +432,6 @@ I think this is a little too aggressive right now, but it's a cool idea.
 (global-set-key (kbd "C-.") 'xref-find-definitions-other-window)
 (define-key global-map (kbd "RET") 'newline-and-indent)
 #+end_src
-
 ** Copying syntax highlighting to the clipboard
 #+begin_src  emacs-lisp :load yes
 (use-package
@@ -441,11 +442,9 @@ I think this is a little too aggressive right now, but it's a cool idea.
    :host github
    :repo "Lindydancer/highlight2clipboard"))
 #+end_src
-
 ** Breadcrumb mode
-Because I'm using this, I'm going to disable LSP's breadcrumb mode, which I've been disappointed with.
-
-#+begin_src emacs-lisp
+Because I'm trying this out, I'm going to disable LSP's breadcrumb mode, which I've been disappointed with.
+#+begin_src emacs-lisp :load yes
 (use-package
  breadcrumb
  :straight '(breadcrumb :type git :host github :repo "joaotavora/breadcrumb")
