--- a/mode-settings/markdown-settings.org
+++ b/mode-settings/markdown-settings.org
@@ -11,7 +11,8 @@
 #+END_SRC
 
 * HTML
-#+begin_src emacs-lisp
-(require 'html-ts-mode)
-(define-key html-ts-mode-map (kbd "M-o M-o") nil)
+#+begin_src emacs-lisp :load yes
+(when (not (eq system-type 'gnu/linux))
+  (require 'html-ts-mode)
+  (define-key html-ts-mode-map (kbd "M-o M-o") nil))
 #+END_SRC
