--- a/mode-settings/global-settings.org
+++ b/mode-settings/global-settings.org
@@ -113,6 +113,7 @@ I think this is a little too aggressive right now, but it's a cool idea.
  (define-key ibuffer-mode-map (kbd "M-o") nil))
 #+END_SRC
 
+*** Window movement keybindings
 #+begin_src emacs-lisp :load yes
 (define-key term-raw-map (kbd "M-o") 'next-multiframe-window)
 (define-key term-raw-map (kbd "M-i") 'previous-multiframe-window)
@@ -121,6 +122,20 @@ I think this is a little too aggressive right now, but it's a cool idea.
 
 (setq aw-keys '(?a ?s ?d ?f ?g ?h ?j ?k ?l))
 #+END_SRC
+*** Sqlite
+So far, I am unable to find a way to compile sqlite3 on my own, but I would love to be able to do this with straight package management.
+#+begin_src emacs-lisp :load no
+(use-package
+ sqlite3
+ :straight
+ '(sqlite3
+   :type git
+   :host github
+   :repo "pekingduck/emacs-sqlite3-api"
+   :files ("*.c" "*.h" "*.el" "Makefile")))
+#+END_SRC
+
+
 
 *** Anzu
 #+begin_src emacs-lisp :load yes
@@ -271,9 +286,9 @@ I find this breaks browsing of long json files, more than it helps me out.
   (if (not (eq window-system nil))
       (if (> (x-display-pixel-width) 1440)
           ;; Set default font larger if on a big screen
-          (set-face-font 'default "roboto mono-15")
+          (set-face-font 'default "roboto mono-12")
         ;; else
-        (set-face-font 'default "roboto mono-14")
+        (set-face-font 'default "roboto mono-12")
         ;; (set-fontset-font "fontset-default" "Menlo 12")
         )
     ;; else
@@ -379,7 +394,7 @@ I find this breaks browsing of long json files, more than it helps me out.
 #+begin_src emacs-lisp :load yes
 (use-package
  apheleia
- 
+
  :config
  (setf (alist-get 'isort apheleia-formatters)
        '("isort" "--stdout" "-"))
@@ -405,6 +420,7 @@ I find this breaks browsing of long json files, more than it helps me out.
  elisp-autofmt
  :commands (elisp-autofmt-mode elisp-autofmt-buffer)
  :hook (emacs-lisp-mode . elisp-autofmt-mode)
+ :init (setq elisp-autofmt-check-elisp-autofmt-exists 'always)
  :straight
  '(elisp-autofmt
    ;; :files (:defaults "elisp-autofmt")
@@ -414,7 +430,7 @@ I find this breaks browsing of long json files, more than it helps me out.
  :config (setq elisp-autofmt-on-save-p nil))
 #+end_src
 
-**  Global Keybindings
+** Global Keybindings
 #+begin_src emacs-lisp :load yes
 (global-set-key (kbd "M-k") 'kill-this-buffer)
 (global-set-key (kbd "C-c C-b") 'compile)
@@ -434,13 +450,14 @@ I find this breaks browsing of long json files, more than it helps me out.
 #+end_src
 ** Copying syntax highlighting to the clipboard
 #+begin_src  emacs-lisp :load yes
-(use-package
- highlight2clipboard
- :straight
- '(highlight2clipboard
-   :type git
-   :host github
-   :repo "Lindydancer/highlight2clipboard"))
+  (when (eq system-type 'darwin)
+    (use-package
+     highlight2clipboard
+     :straight
+     '(highlight2clipboard
+       :type git
+       :host github
+       :repo "Lindydancer/highlight2clipboard")))
 #+end_src
 ** Breadcrumb mode
 Because I'm trying this out, I'm going to disable LSP's breadcrumb mode, which I've been disappointed with.
