--- a/web_version.org
+++ b/web_version.org
@@ -20,6 +20,21 @@ date: 2023-05-22
 
 This web page is a tangled version of my literate [[https://github.com/jsigman/emacs-config][elisp config]]. Throughout this document, you may find helpful notes, tricks, and comments. I have been tinkering with emacs in some way since 2013. I made this repeatable and git-controlled in 2019, and in 2023 I began to publish it on my web site.
 
+** Notes on code blocks
+If a code block is active, then it will appear with ~emacs-lisp~ syntax highlighting. If it's not being used, then it will show up with ~plaintext~ highlighting. For example:
+
+#+BEGIN_EXPORT markdown
+{% highlight plaintext %}
+(print "This code will not be run!")
+{% endhighlight %}
+
+{% highlight emacs-lisp %}
+(print "This code is run in my config!")
+{% endhighlight %}
+#+END_EXPORT
+
+Whether a code block is run at load time is controlled by the "~:load yes~" block argument of ~literate-elisp~.
+
 #+TOC: headlines 2
 
 #+include: "mode-settings/macos-settings.org"
