--- a/web_version.org
+++ b/web_version.org
@@ -35,41 +35,41 @@ If a code block is active, then it will appear with ~emacs-lisp~ syntax highligh
 
 Whether a code block is run at load time is controlled by the ~:load yes~ block argument of ~literate-elisp~.
 
-#+TOC: headlines 1
+#+TOC: headlines 2
 
-#+include: "mode-settings/macos-settings.org"
-#+include: "mode-settings/path-settings.org"
-#+include: "mode-settings/colors-settings.org"
-#+include: "mode-settings/global-settings.org"
-#+include: "mode-settings/config-modes-settings.org"
-#+include: "mode-settings/parens-settings.org"
-#+include: "mode-settings/elisp-settings.org"
-#+include: "mode-settings/dired-settings.org"
-#+include: "mode-settings/projectile-settings.org"
-#+include: "mode-settings/corfu-vertico-settings.org"
-#+include: "mode-settings/selectrum-settings.org"
-#+include: "mode-settings/ivy-counsel-swiper-settings.org"
-#+include: "mode-settings/company-settings.org"
-#+include: "mode-settings/matlab-settings.org"
-#+include: "mode-settings/consult-embark-marginalia-settings.org"
-#+include: "mode-settings/latex-settings.org"
-#+include: "mode-settings/snippets-settings.org"
-#+include: "mode-settings/term-settings.org"
-#+include: "mode-settings/rg-settings.org"
-#+include: "mode-settings/avy-settings.org"
-#+include: "mode-settings/lsp-settings.org"
-#+include: "mode-settings/eglot-settings.org"
-#+include: "mode-settings/python-settings.org"
-#+include: "mode-settings/copilot-settings.org"
-#+include: "mode-settings/flycheck-settings.org"
-#+include: "mode-settings/tramp-settings.org"
-#+include: "mode-settings/java-settings.org"
-#+include: "mode-settings/org-settings.org"
-#+include: "mode-settings/magit-settings.org"
-#+include: "mode-settings/multiple-cursors-settings.org"
-#+include: "mode-settings/docker-settings.org"
-#+include: "mode-settings/dap-settings.org"
-#+include: "mode-settings/treemacs-settings.org"
-#+include: "mode-settings/markdown-settings.org"
-#+include: "mode-settings/tree-sitter-settings.org"
-#+include: "mode-settings/modeline-settings.org"
+#+include: "mode-settings/macos-settings.org" :minlevel 1
+#+include: "mode-settings/path-settings.org" :minlevel 1
+#+include: "mode-settings/colors-settings.org" :minlevel 1
+#+include: "mode-settings/global-settings.org" :minlevel 1
+#+include: "mode-settings/config-modes-settings.org" :minlevel 1
+#+include: "mode-settings/parens-settings.org" :minlevel 1
+#+include: "mode-settings/elisp-settings.org" :minlevel 1
+#+include: "mode-settings/dired-settings.org" :minlevel 1
+#+include: "mode-settings/projectile-settings.org" :minlevel 1
+#+include: "mode-settings/corfu-vertico-settings.org" :minlevel 1
+#+include: "mode-settings/selectrum-settings.org" :minlevel 1
+#+include: "mode-settings/ivy-counsel-swiper-settings.org" :minlevel 1
+#+include: "mode-settings/company-settings.org" :minlevel 1
+#+include: "mode-settings/matlab-settings.org" :minlevel 1
+#+include: "mode-settings/consult-embark-marginalia-settings.org" :minlevel 1
+#+include: "mode-settings/latex-settings.org" :minlevel 1
+#+include: "mode-settings/snippets-settings.org" :minlevel 1
+#+include: "mode-settings/term-settings.org" :minlevel 1
+#+include: "mode-settings/rg-settings.org" :minlevel 1
+#+include: "mode-settings/avy-settings.org" :minlevel 1
+#+include: "mode-settings/lsp-settings.org" :minlevel 1
+#+include: "mode-settings/eglot-settings.org" :minlevel 1
+#+include: "mode-settings/python-settings.org" :minlevel 1
+#+include: "mode-settings/copilot-settings.org" :minlevel 1
+#+include: "mode-settings/flycheck-settings.org" :minlevel 1
+#+include: "mode-settings/tramp-settings.org" :minlevel 1
+#+include: "mode-settings/java-settings.org" :minlevel 1
+#+include: "mode-settings/org-settings.org" :minlevel 1
+#+include: "mode-settings/magit-settings.org" :minlevel 1
+#+include: "mode-settings/multiple-cursors-settings.org" :minlevel 1
+#+include: "mode-settings/docker-settings.org" :minlevel 1
+#+include: "mode-settings/dap-settings.org" :minlevel 1
+#+include: "mode-settings/treemacs-settings.org" :minlevel 1
+#+include: "mode-settings/markdown-settings.org" :minlevel 1
+#+include: "mode-settings/tree-sitter-settings.org" :minlevel 1
+#+include: "mode-settings/modeline-settings.org" :minlevel 1
