--- a/mode-settings/global-settings.org
+++ b/mode-settings/global-settings.org
@@ -474,5 +474,5 @@ Because I'm trying this out, I'm going to disable LSP's breadcrumb mode, which I
 (use-package
  breadcrumb
  :straight '(breadcrumb :type git :host github :repo "joaotavora/breadcrumb")
- :config (breadcrumb-mode t)
- +end_src
+ :config (breadcrumb-mode t))
+#+end_src
