--- a/mode-settings/macos-settings.org
+++ b/mode-settings/macos-settings.org
@@ -1,19 +1,16 @@
 * MacOS specific settings
-#+property: header-args:emacs-lisp :load yes
-
 #+begin_src emacs-lisp
 (when (eq system-type 'darwin)
-(setq mac-command-modifier 'control)
-(setq mac-right-command-modifier 'meta)
+  (setq mac-command-modifier 'control)
+  (setq mac-right-command-modifier 'meta)
 
-(add-to-list 'default-frame-alist '(ns-transparent-titlebar . t))
+  (add-to-list 'default-frame-alist '(ns-transparent-titlebar . t))
 
-(add-to-list
- 'default-frame-alist
- '(ns-appearance . light)) ;; or dark - depending on your theme
+  (add-to-list
+   'default-frame-alist
+   '(ns-appearance . light)) ;; or dark - depending on your theme
 
-(straight-use-package
- '(osx-plist :type git :host github :repo "gonewest818/osx-plist"))
-(require 'osx-plist)
-)
+  (straight-use-package
+   '(osx-plist :type git :host github :repo "gonewest818/osx-plist"))
+  (require 'osx-plist))
 #+end_src
