--- a/mode-settings/copilot-settings.org
+++ b/mode-settings/copilot-settings.org
@@ -1,6 +1,6 @@
 * Large Language Models in Emacs
 ** Github Copilot
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :load yes
 (use-package
  copilot
  :straight
