--- a/mode-settings/latex-settings.org
+++ b/mode-settings/latex-settings.org
@@ -1,7 +1,5 @@
 * Latex
-#+PROPERTY: header-args:emacs-lisp :load yes
-
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :load yes
 (use-package
  tex
  :straight auctex
