--- a/mode-settings/macos-settings.org
+++ b/mode-settings/macos-settings.org
@@ -1,5 +1,5 @@
 * MacOS specific settings
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :load yes
 (when (eq system-type 'darwin)
   (setq mac-command-modifier 'control)
   (setq mac-right-command-modifier 'meta)
@@ -10,7 +10,5 @@
    'default-frame-alist
    '(ns-appearance . light)) ;; or dark - depending on your theme
 
-  (straight-use-package
-   '(osx-plist :type git :host github :repo "gonewest818/osx-plist"))
-  (require 'osx-plist))
+  (use-package osx-plist :straight '(osx-plist :type git :host github :repo "gonewest818/osx-plist")))
 #+end_src
