--- a/mode-settings/markdown-settings.org
+++ b/mode-settings/markdown-settings.org
@@ -1,7 +1,5 @@
 * Markdown
-#+PROPERTY: header-args:emacs-lisp :load yes
-
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :load yes
 (use-package
  markdown-mode
  :mode ("README\\.md\\'" . gfm-mode)
