--- a/mode-settings/multiple-cursors-settings.org
+++ b/mode-settings/multiple-cursors-settings.org
@@ -1,7 +1,5 @@
 * Multiple Cursors (MC)
-#+PROPERTY: header-args:emacs-lisp :load yes
-
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :load yes
 (use-package
  multiple-cursors
  :config
