--- a/mode-settings/dired-settings.org
+++ b/mode-settings/dired-settings.org
@@ -1,7 +1,5 @@
 * Dired Mode
-#+PROPERTY: header-args:emacs-lisp :load yes
-
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :load yes
 (setq
  dired-omit-files
  "^\\.?#\\|^\\.\\(DS_Store\\|localized\\|AppleDouble\\)$\\|^\\.\\.$")
@@ -18,4 +16,4 @@
  (setq wdired-allow-to-change-permissions t)
  (define-key dired-mode-map (kbd "e") 'wdired-change-to-wdired-mode)
  (define-key dired-mode-map (kbd "M-G") nil))
-#+END_SRC
+#+end_src
