--- a/mode-settings/elisp-settings.org
+++ b/mode-settings/elisp-settings.org
@@ -1,8 +1,5 @@
 * Elisp
-#+PROPERTY: header-args:emacs-lisp :load yes
-
-#+begin_src emacs-lisp
-;; elisp settings
+#+begin_src emacs-lisp :load yes
 (use-package eros :config (eros-mode t))
 (use-package
  lisp-extra-font-lock
@@ -14,18 +11,15 @@
  :hook (emacs-lisp-mode . highlight-function-calls-mode))
 
 (use-package format-all :hook (elisp-mode . format-all-mode))
-
-
 (use-package
  inspector
  :straight
  '(inspector :type git :host github :repo "mmontone/emacs-inspector"))
 
-; print the full value of eval'ed variables
 (setq eval-expression-print-length nil)
 (setq eval-expression-print-level nil)
 
 (add-to-list
  'auto-mode-alist
  '("\\.dir-locals\\(?:-2\\)?\\.el\\'" . emacs-lisp-mode))
-#+END_SRC
+#+end_src
