--- a/mode-settings/rg-settings.org
+++ b/mode-settings/rg-settings.org
@@ -1,7 +1,5 @@
 * Ripgrep
-#+PROPERTY: header-args:emacs-lisp :load yes
-
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :load yes
 (use-package wgrep :config (setq wgrep-auto-save-buffer t))
 (use-package rg :config (rg-enable-menu) (setq rg-executable "rg"))
 #+END_SRC
